--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,9 +8,8 @@
 body {
   background-color: #0b141a;
   height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin: 0;
+  padding: 0;
   overflow: hidden;
 }
 
